--- a/client/src/styles/PhotosPage.css
+++ b/client/src/styles/PhotosPage.css
@@ -11,6 +11,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 1rem;
+  height: 80px;
   border-bottom: 1px solid #eaeaea;
 }
 
@@ -147,7 +148,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: calc(100vh - 70px); /* Subtract navbar height */
+  min-height: calc(100vh - 80px); /* Subtract navbar height */
   margin-top: 1rem; /* Add some space below the navbar */
   font-size: 1.2rem;
   color: #666;
@@ -281,7 +282,7 @@
 }
 
 .virtualized-grid-container {
-  height: calc(100vh - 70px); /* Adjust based on your header height */
+  height: calc(100vh - 80px); /* Adjust based on your header height */
   width: 100%;
   padding: 4px;
   box-sizing: border-box;
